--- a/cpp_skeleton/CMakeLists.txt
+++ b/cpp_skeleton/CMakeLists.txt
@@ -1,13 +1,4 @@
-cmake_minimum_required(VERSION 3.2)
-
-# Replace "cpp-pokerbot" with your bot's name
-project(cpp-pokerbot)
-
-set(CMAKE_CXX_STANDARD 17)
-
-add_subdirectory(libs)
-
-file(GLOB_RECURSE BOT_SRC ${PROJECT_SOURCE_DIR}/src/*.cpp)
-add_executable(pokerbot ${BOT_SRC})
-target_include_directories(pokerbot PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(pokerbot skeleton)
+cmake_minimum_required (VERSION 3.1.0)
+project (solver)
+add_executable (solver KuhnPokerGame.cpp RPSGame.cpp Random.cpp main.cpp)
+SET(CMAKE_CXX_FLAGS "-std=c++14 -O3")
